# squint

./: .editorconfig  .gitignore  .nvim.lua  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  flake.nix
.github/workflows/: ci.yaml
benches/: macros.rs  main.rs
proptest-regressions/: encoding.txt
src/: encoding.rs  encryption.rs  error.rs  id.rs  lib.rs  tag.rs  tests.rs
tests/: properties.rs
