[package]
name = "squint"
version = "0.1.3"
description = "Encode sequential integer ids as random looking strings"
authors = ["Stanislav Stoyanov <grimerssy@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.72"
readme = "README.md"
documentation = "https://docs.rs/squint"
repository = "https://github.com/grimerssy/squint"
keywords = ["sql", "id", "encode", "obfuscate"]
categories = ["cryptography", "encoding", "no-std"]

[features]
default = ["std"]
std = []
zeroize = ["aes/zeroize"]

[dependencies]
aes = "0.8.4"

[dev-dependencies]
proptest = { version = "1.5.0", features = ["attr-macro"] }

[profile.test.package.proptest]
opt-level = 3

[profile.test.package.rand_chacha]
opt-level = 3
