[package]
name = "squint"
version = "0.1.4"
description = "Encode sequential integer ids as random looking strings"
authors = ["Stanislav Stoyanov <grimerssy@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.72"
readme = "README.md"
documentation = "https://docs.rs/squint"
repository = "https://github.com/grimerssy/squint"
keywords = ["sql", "id", "encode", "obfuscate"]
categories = ["cryptography", "encoding", "no-std"]

[features]
default = ["std", "tag"]
std = []
tag = ["dep:const-fnv1a-hash"]
zeroize = ["aes/zeroize"]

[dependencies]
aes = "0.8.4"
const-fnv1a-hash = { version = "1.1.0", optional = true }

[dev-dependencies]
prop-test = "0.1.1"
criterion = "0.5.1"

[[bench]]
name = "main"
harness = false

[profile.test.package.proptest]
opt-level = 3

[profile.test.package.rand_chacha]
opt-level = 3
